Changes for 2.4.4rc1

New features:
A.F....... [ZBX-1357] updated Brazilian Portuguese, Chinese (China), Japanese and Slovak translations; thanks to Zabbix translators (Richlv)
A.F....PS. [ZBXNEXT-2160] added support for extended IP ranges in network discovery and action conditions (Ivo, Sasha, Wiper)

Bug fixes:
.......PS. [ZBX-9154] fixed compilation error with Oracle backend (wiper)
..F....... [ZBX-9042] unified "mass update" spelling in trigger configuration page (Richlv)
..F....... [ZBX-9153] fixed vmware.version item key being listed as vmware.eventlog in the item key helper (Richlv)
A......... [ZBX-8950] fixed "selecIconMap" option in map.get method (Oleg)
..F....... [ZBX-8405] fixed typo in item key helper for system.cpu.num item description (asaveljevs)
..F....... [ZBX-8846] fixed non-existent page displaying (Oleg)
........S. [ZBX-9126] fixed processing of trigger/graph prototypes in case when all item prototypes in trigger/graph prototypes were changed (Sasha)

--------------------------------------------------------------------------------
Changes for 2.4.3

2.4.3rc1 was released as 2.4.3 without any changes

--------------------------------------------------------------------------------
Changes for 2.4.3rc1

New features:
A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian, Japanese and Slovak translations; thanks to Zabbix translators (Richlv)
.......PS. [ZBX-4054] added support for SNMP values of type OID (asaveljevs)

Bug fixes:
........S. [ZBX-8873] fixed incorrect event being generated after maintenance in case there are out of order events due to proxy (asaveljevs, Sasha)
.......PS. [ZBX-8882] fixed message logging on DB2 errors (igors)
.......PS. [ZBX-8992] made Zabbix prefer the threshold sensor over a discrete sensor, in case both are available under the same name (asaveljevs)
...G...... [ZBX-8506] fixed memory leak in wmi.get[]; thanks to Pedro Nunes for patch (asaveljevs)